fix(Covid19Chart): update style.css to fix blurry chart

--- a/src/components/Covid19Chart/style.css
+++ b/src/components/Covid19Chart/style.css
@@ -16,15 +16,10 @@
   width: auto;
   height: 250px;
 
-  margin-right: 2rem;
   margin-bottom: 5rem;
-}
-
-canvas {
   padding: 1rem;
-
-  background: var(--primary-color);
   border-radius: 10px;
+  background: var(--primary-color);
 }
 
 @media only screen and (min-width: 400px) {
